[package]
name = "zerotier"
version = "0.1.0"
authors = ["Luka Teras <luka@sdf.org>"]
description = "Library for interfacing with ZeroTier"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/lukateras/rust-zerotier-crypto"
edition = "2018"

[dependencies]
arrayref = "0.3.9"
failure = "0.1.8"
generic-array = "1"
hex = "0.4.3"
salsa20 = "0.10.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"

[dependencies.ed25519-dalek]
version = "2"

[dependencies.x25519-dalek]
version = "2"
features = ["static_secrets"]
