[package]
name = "zerotier-crypto"
version = "0.1.0"
authors = ["Luka Teras <luka@sdf.org>"]
edition = "2021"
description = "Library for interfacing with ZeroTier"
readme = "README.md"
repository = "https://github.com/lukateras/rust-zerotier-crypto"
license = "BSD-2-Clause-Patent"

[dependencies]
arrayref = "0.3.9"
failure = "0.1.8"
generic-array = "1"
hex = "0.4.3"
salsa20 = "0.10.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"

[dependencies.ed25519-dalek]
version = "2"

[dependencies.x25519-dalek]
version = "2"
features = ["static_secrets"]
