[package]
name = "zerotier-crypto"
version = "0.2.0-SNAPSHOT"
authors = ["Luka Teras <luka@sdf.org>"]
edition = "2021"
description = "ZeroTier-compatible cryptography library"
readme = "README.md"
repository = "https://github.com/lukateras/rust-zerotier-crypto"
license = "BSD-2-Clause-Patent"

[dependencies]
arrayref = "0.3.9"
generic-array = "1"
hex = "0.4"
salsa20 = "0.10"
sha2 = "0.10"
thiserror = "2"

[dependencies.ed25519-dalek]
version = "2"

[dependencies.x25519-dalek]
version = "2"
features = ["static_secrets"]
